--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <!-- Primary Meta Tags -->
-    <title>Nexura Token (NXR) - Next Generation Cross-Chain DeFi Protocol</title>
-    <meta name="title" content="Nexura Token (NXR) - Next Generation Cross-Chain DeFi Protocol">
-    <meta name="description" content="Nexura Token (NXR) is a revolutionary DeFi protocol enabling seamless cross-chain transactions with enhanced privacy, minimal fees, and maximum security. Swap, trade, and manage your NXR tokens.">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://nexuratoken.com/">
-    <meta property="og:title" content="Nexura Token (NXR) - Next Generation Cross-Chain DeFi Protocol">
-    <meta property="og:description" content="Nexura Token (NXR) is a revolutionary DeFi protocol enabling seamless cross-chain transactions with enhanced privacy, minimal fees, and maximum security. Swap, trade, and manage your NXR tokens.">
-    <meta property="og:image" content="https://nexuratoken.com/og-image.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://nexuratoken.com/">
-    <meta property="twitter:title" content="Nexura Token (NXR) - Next Generation Cross-Chain DeFi Protocol">
-    <meta property="twitter:description" content="Nexura Token (NXR) is a revolutionary DeFi protocol enabling seamless cross-chain transactions with enhanced privacy, minimal fees, and maximum security. Swap, trade, and manage your NXR tokens.">
-    <meta property="twitter:image" content="https://nexuratoken.com/og-image.jpg">
-
-    <!-- Additional SEO Tags -->
-    <meta name="keywords" content="Nexura, NXR, Nexura Token, cryptocurrency, DeFi, cross-chain, blockchain, crypto token, NXR token, Nexura Protocol">
-    <meta name="author" content="Nexura Protocol">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://nexuratoken.com/">
-
-    <!-- Theme Color for Mobile Browsers -->
-    <meta name="theme-color" content="#0D0D1F">
+    <title>$TRIANGLE FACE MAN - The Most Dangerous Memecoin</title>
+    <meta name="description" content="What would you do if this man appeared in your mom's bedroom? Join the most terrifying memecoin of 2024!" />
   </head>
   <body>
     <div id="root"></div>
